# FastNote

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: app.rs  database.rs  main.rs  models.rs  state.rs  tests.rs  utils.rs
src-tauri/src/features/: chat.rs  essays.rs  mod.rs  profile.rs  projects.rs  settings.rs  tasks.rs  workspace.rs
src-web/: App.tsx  README.md  main.tsx
src-web/app/: App.tsx
src-web/app/stores/: uiStore.ts
src-web/core/services/: commands.ts  localDb.ts
src-web/features/assistant/: AssistantPage.tsx
src-web/features/dashboard/: DashboardPage.tsx
src-web/features/essays/: EssaysPage.tsx  tagTree.ts  useEssayDrafts.ts
src-web/features/essays/editor/: RichTextEditor.tsx  (+1 more)
src-web/features/settings/: SettingsPage.tsx
src-web/features/tasks/: TasksPage.tsx
src-web/features/tools/: ToolsPage.tsx
src-web/pages/: AssistantPage.tsx  DashboardPage.tsx  NotesPage.tsx  SettingsPage.tsx  TasksPage.tsx  ToolsPage.tsx
src-web/services/: commands.ts  localDb.ts
src-web/shared/components/: feedback.tsx
src-web/shared/styles/: base.css  components.css  layout.css  pages.css
src-web/shared/types/: index.ts
src-web/shared/utils/: essay.ts
src-web/stores/: uiStore.ts
src-web/styles/: base.css  components.css  layout.css  pages.css
src-web/types/: index.ts
src/lib/: commands.ts  localDb.ts
